# native-memory-tracker

./: .gitignore  README.md  README.zh-CN.md  connect.sh  lazy_visit.py  pre.sh  settings.gradle.kts
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  idle_page_elf.cpp  idle_page_elf.h  idle_page_log.h  idle_page_mmap.cpp  idle_page_mmap.h  idle_page_monitor.cpp  idle_page_monitor.h  idle_page_task.cpp  idle_page_task.h  idle_page_timer.cpp  idle_page_timer.h  log_buffer.cpp  log_buffer.h  log_hooks.cpp  log_hooks.h  native-lib.cpp  pfn_helper.cpp  so2-hook.cpp
app/src/main/cpp/elf_reader/: CMakeLists.txt  elf_dwarf.cpp  elf_dwarf.h  elf_dynamic.cpp  elf_dynamic.h  elf_ehframe.cpp  elf_ehframe.h  elf_options.cpp  elf_options.h  elf_plt.cpp  elf_plt.h  elf_relocations.cpp  elf_relocations.h  elf_rodata.cpp  elf_rodata.h  elf_sections.cpp  elf_sections.h  elf_segments.cpp  elf_segments.h  elf_symbols.cpp  elf_symbols.h  elf_types.cpp  elf_types.h  main.cpp
app/src/main/java/com/example/demo_so/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
docs/: ByteHook原理与使用.md  ELF学习.md  android-high-performance-lockfree-logging-system.md  bhook集成.md  游戏内存模拟demo.md
gradle/: prefab_bypass.gradle
gradle/wrapper/: gradle-wrapper.properties.bak
